--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('Foto Fondo azul rallado.jpg'); /* Fondo adaptable */
+    background-image: url('fondo.jpg'); /* Fondo adaptable */
     background-size: cover;
     background-position: center;
 }
