--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ header {
     text-decoration: none;
     border-radius: 5px;
     margin: 10px;
+	text-align: center;
 }
 
 /* Estilos de productos */
