--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@ header {
     text-decoration: none;
     border-radius: 5px;
     margin: 10px;
-	text-align: center;
 }
 
 /* Estilos de productos */
@@ -138,4 +137,7 @@ header {
     color: green;
     display: block;
     margin-top: 5px;
+}
+.productos-lista{
+	
 }
